<resources>
    <string name="app_name">SREDA-OFFICE-KIT</string>
    <string-array name="blood_group">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B_</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string name="car"><b>Sustainable And Renewable Energy\n Development Authority
Power Division</b>\n <u>Car Requisition Form(govt./personal purpose)</u></string>
    <string name="car_acceptance"><b><u>Completed By The Office</u></b></string>
    <string name="leave"><b><u>Application form for casual / optional holidays</u></b></string>
    <string name="hint_email">name@example.com</string>
    <string name="btn_name">Name</string>
    <string name="hint_address_1">Address 1</string>
    <string name="hint_city">City</string>
    <string name="hint_reference_no">Reference No*</string>
    <string name="hint_room">Room*</string>
    <string name="hint_booking_type">Booking Type*</string>
    <string name="hint_chairperson_name">Chairperson Name*</string>
    <string name="hint_no_of_member">No Of Member*</string>
    <string name="hint_subject">Subject</string>
    <string name="hint_prefernce_no">Preference No</string>
    <string name="hint_notice">Notice</string>
    <string name="hint_issue_no">Issue No</string>
    <string name="hint_end_date_time">End Date Time*</string>
    <string name="hint_start_date_time">Start Date Time*</string>
    <string name="hint_fee">Fee*</string>
    <string name="hint_discount">Discount</string>
    <string name="hint_total_amount">Total Amount*</string>
    <string name="hint_booking_purpose">Booking Purpose*</string>
    <string name="label_payment_panel">Payment Pannel</string>
    <string name="label_from">From</string>
    <string name="action_menu">Menu</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_edit_account">Edit Account</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="btn_accounts">Accounts</string>
    <string name="btn_add">Add</string>
    <string name="btn_any">Any</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_close">Close</string>
    <string name="btn_comments">Comments</string>
    <string name="btn_complete_trip">Complete Trip</string>
    <string name="btn_confirm_you_have_arrived">Confirm you have arrived</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_dismiss">Dismiss</string>
    <string name="btn_earnings">Earnings</string>
    <string name="btn_forgot_password">Forgot Password</string>
    <string name="btn_gallery">Gallery</string>
    <string name="btn_home">Home</string>
    <string name="btn_issues">Issues</string>
    <string name="btn_location">Location</string>
    <string name="btn_log_in">Login</string>
    <string name="btn_login_here">Login Here</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_ok">OK</string>
    <string name="btn_open">Open</string>
    <string name="btn_open_settings">Open Settings</string>
    <string name="btn_ratings">Ratings</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_register">Register</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_resend">Resend Verification Code</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_restore">Restore</string>
    <string name="btn_retake">Retake</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_save">Save</string>
    <string name="btn_select">Select</string>
    <string name="btn_select_country">Select Country</string>
    <string name="btn_select_district">Select District</string>
    <string name="btn_select_location">Select Location</string>
    <string name="btn_select_state">Select State</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_start_trip">Start Trip</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_take_a_photo">Take A Photo</string>
    <string name="btn_take_photo">Take Photo</string>
    <string name="btn_tap_to_confirm">Tap to Confirm</string>
    <string name="btn_time">Time</string>
    <string name="btn_trip_history">Trip History</string>
    <string name="btn_upload">Upload</string>
    <string name="hint_confirm_password">Confrim Password</string>
    <string name="hint_country">Country</string>
    <string name="hint_email_address"><i>Email Address</i></string>
    <string name="hint_enter_your_city">Enter your City</string>
    <string name="hint_enter_your_name_here">Enter your name here</string>
    <string name="hint_enter_your_number">Enter Your Number</string>
    <string name="hint_enter_your_password">Enter your Password</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_name">Name</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_password"><i>Password</i></string>
    <string name="hint_phone_number">Phone</string>
    <string name="hint_postal_code">Postal Code</string>
    <string name="hint_region_or_state">Region/State</string>
    <string name="hint_search">Search…</string>
    <string name="hint_state">State</string>
    <string name="hint_type_something">Type Something…</string>
    <string name="hint_username">Username</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="label_about">About</string>
    <string name="label_about_this_version">About this Version</string>
    <string name="label_about_us">About Us</string>
    <string name="label_accessibility">Accessibility</string>
    <string name="label_account_status">Account Status</string>
    <string name="label_address">Address</string>
    <string name="label_agreement_proceed">To Proceed, please review and agree to the terms of the content below:</string>
    <string name="label_already_have_an_account">Already have an Account?</string>
    <string name="label_approved">Approved</string>
    <string name="label_at_the_end_of_the_trip">At the end of the Trip</string>
    <string name="label_background_check_consent_form">Background Check Consent Form</string>
    <string name="label_backup_restore_message">\'Backing up\' means making a copy of your most important files. This can then be used if the original copy is used. Preferably the second copy should be held at a different location to the original and be kept in a secure environment.</string>
    <string name="label_bank_passbook">Bank Passbook</string>
    <string name="label_base_fare">Base Fare</string>
    <string name="label_call">Call</string>
    <string name="label_cancelled">Cancelled</string>
    <string name="label_cash_collected">Cash Collected</string>
    <string name="label_change_password">Change Password</string>
    <string name="label_collect_cash">Collect Cash</string>
    <string name="label_commercial_insurance">Commercial Insurance</string>
    <string name="label_consent_agreement">I understand that the information provide by me may be used by laTaxi, or its affiliates, authbridge research services private limited or its affiliates (being a third party agency appointed by laTaxi), or any third party appointed by laTaxi from time to time, to verify and validate the information I have provided as necessary background Checks. I understand that the third party agency appointed by laTaxi may obtain Information it deems appropriate from various sources including, but not limited to, current and past employers, Criminal conviction records, educational records, professional and personal references and other verifying sources / authorities.</string>
    <string name="label_contacts">Contacts</string>
    <string name="label_continue_to_earn_more_money">Continue to earn more money \nin your spare time</string>
    <string name="label_create_your_account_password">Create your account Password</string>
    <string name="label_current_rating">Current Rating</string>
    <string name="label_daily_earnings">Daily Earnings</string>
    <string name="label_did_you_know">Did you know that \nthousands of \nDrivers are using LaTaxi</string>
    <string name="label_distance">Distance</string>
    <string name="label_documents">Documents</string>
    <string name="label_driver">Driver</string>
    <string name="label_driver_cum_owner">Driver cum Owner</string>
    <string name="label_driver_cum_owner_option">Choose this option if you own the vehicle and plan to drive yourself too</string>
    <string name="label_driver_documents">Driver Documents</string>
    <string name="label_driver_licence_with_badge_number">Driver Licence with Badge Number</string>
    <string name="label_driver_license">Driver License</string>
    <string name="label_drop_off">- \tDrop Off</string>
    <string name="label_duration">Duration</string>
    <string name="label_earn_more">Earn More</string>
    <string name="label_email">Email</string>
    <string name="label_ensure_all_information">Ensure all information is readable and not blurry. Make sure that all corners of the documents are visible. You documents may not be accepted if it cannot be read properly or all four corners are not visible.</string>
    <string name="label_enter_the_4_digit_code">Enter the 4 - digit code sent to you \nat</string>
    <string name="label_enter_the_verification_code">Enter the verification code sent to you</string>
    <string name="label_error">Error</string>
    <string name="label_estimated_payout">Estimated Payout</string>
    <string name="label_fare">Fare</string>
    <string name="label_fitness_certificate">Fitness Certificate</string>
    <string name="label_fri">Fri</string>
    <string name="label_help">Help</string>
    <string name="label_hours_online"> Hrs Online</string>
    <string name="label_i_accept">I Accept</string>
    <string name="label_i_agree_to_terms_and_conditions">I Agree to the Terms and Conditions</string>
    <string name="label_i_agree_to_the">I Agree to the </string>
    <string name="label_i_agree_to_the_terms_and_conditions">I Agree to the Terms and Conditions</string>
    <string name="label_i_am_deaf_or_hard_of_hearing">I"'"m deaf or hard of hearing</string>
    <string name="label_if_a_rider_reports_a_problem">If a rider reports a problem, the reason will appear here.</string>
    <string name="label_keep_driving_and_see">Keep driving and see what people say!</string>
    <string name="label_la_taxi">La Taxi</string>
    <string name="label_to">TO</string>
    <string name="sendPhoto">Photo Camera</string>
    <string name="sign_out">Sign Out</string>
    <string name="sendPhotoGallery">Photo Gallery</string>
    <string name="sendLocation">Send Location</string>
    <string name="label_meeting_room_booking">Meeting Room Booking</string>
    <string name="title">Please Select</string>
    <string name="label_vehicle_requisition">Vehicle Requisition</string>
    <string name="label_employee_name">Employee Name *</string>
    <string name="label_journey_purpose">Journey Purpose *</string>
    <string name="label_journey_start">Journey Start Date *</string>
    <string name="label_journey_end">Journey End Date *</string>
    <string name="hint_location_from">Journey Location From *</string>
    <string name="hint_journey_location_to">Journey Location To *</string>
</resources>