<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/sendPhoto"
        android:id="@+id/sendPhoto"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:title="@string/sendPhotoGallery"
        android:id="@+id/sendPhotoGallery"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:title="@string/sendLocation"
        android:id="@+id/sendLocation"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:title="@string/sign_out"
        android:visible="true"
        android:id="@+id/sign_out"
        app:showAsAction="never"/>

</menu>