<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="50dp"
    android:paddingTop="40dp">

    <azhar.testlayoutvisibility.nanosoft.usemyappashomescreenandroid.widgets.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/label_vehicle_requisition"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_red_3"
        android:textStyle="bold" />


    <azhar.testlayoutvisibility.nanosoft.usemyappashomescreenandroid.widgets.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_employee_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_red_3"
        android:textStyle="bold" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#cfcfcf"
            android:orientation="vertical"
            android:layout_gravity="center"
           >

            <Spinner
                android:id="@+id/spinnerEmployeeName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:prompt="@string/title" />


        </LinearLayout>



    <azhar.testlayoutvisibility.nanosoft.usemyappashomescreenandroid.widgets.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_journey_purpose"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_red_3"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cfcfcf"
        android:orientation="vertical"
       >

        <Spinner
            android:id="@+id/spinnerJourneyPurpose"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:prompt="@string/title" />


    </LinearLayout>

    <include
        android:id="@+id/layoutPayment"
        layout="@layout/booking_room_payment"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <azhar.testlayoutvisibility.nanosoft.usemyappashomescreenandroid.widgets.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/label_journey_start"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_red_3"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvStartDate"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/dotted_line"
                android:drawableRight="@drawable/ic_today_black_24dp"
                android:gravity="center"
                android:hint="@string/hint_start_date_time"
                android:onClick="setJourneyStartDateTime"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

        </LinearLayout>

        <azhar.testlayoutvisibility.nanosoft.usemyappashomescreenandroid.widgets.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/label_journey_end"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_red_3"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvEndDate"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:background="@drawable/dotted_line"
                android:drawableRight="@drawable/ic_today_black_24dp"
                android:gravity="center"
                android:hint="@string/hint_end_date_time"
                android:onClick="setJourneyEndDateTime"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_chairperson_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:hintTextAppearance="@style/HintAppearance">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietxt_location_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dotted_line"
                android:hint="@string/hint_location_from"
                android:inputType="textPostalAddress|textCapWords"
                android:minHeight="40dp"
                android:textColor="@color/text_2" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_number_of_member"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:hintTextAppearance="@style/HintAppearance">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietxt_location_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dotted_line"
                android:hint="@string/hint_journey_location_to"
                android:inputType="textPostalAddress|textCapWords"
                android:minHeight="40dp"
                android:textColor="@color/text_2" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

</LinearLayout>


